# lost-engine

./: CMakeLists.txt
demos/square/: square.cpp  square.hpp
include/glad/: glad.h
lib/: glad.c
src/: component.hpp  components.cpp  components.hpp  engine.cpp  engine.hpp  logger.cpp  logger.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  stage.cpp  stage.hpp  systems.cpp  systems.hpp  utils.hpp  vectors.hpp
src/shaders/Mesh/: shader.frag  shader.vert  shader.vert.spv
src/shaders/UVMesh/: fragment.glsl  vertex.glsl
src/vulkan/: device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp
